Stay compatible with Java 8